<resources>
    <string name="app_name">ConfiguracaoPersonagem</string>
    <string name="label_titulo">Crie seu personagem</string>
    <string name="label_nome">Nome do personagem</string>
    <string name="label_sexo">Sexo</string>
    <string name="label_m">É menino</string>
    <string name="label_f">É menina</string>
    <string name="label_rodape">Desenvolvido por FIAP</string>
    <string name="label_classe">Classe</string>
    <string name="anao">Anão</string>
    <string name="elfo">Elfo</string>
    <string name="mago">Mago</string>
    <string name="guerreiro">Guerreiro</string>
    <string name="label_forca">Força</string>
</resources>
